--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>Apart from being a web developer, I enjoy most of my time being outdoors. I like to do thrills and travel. Till now I had done bungy jump, flying fox and river rafting.</p>
+          <p class="mb-0">When forced indoors, I like to play mobile games, and I spend a large amount of my free time exploring the latest technology advancements in the web development world.</p>
         </div>
       </section>
 
