--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
 
     <meta charset="utf-8">
@@ -11,6 +10,7 @@
     <title>Resume - Utkarsh Pandey</title>
 
     <!-- Bootstrap core CSS -->
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
